--- a/BetaTestLab_01_HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/BetaTestLab_01_HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -6434,6 +6434,23 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.GVL_LVCP1.stGroup10_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup10_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 10 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
         "PLC1.GVL_LVCP1.stGroup1_ContactorHMI": {
             "ACCESS": 3,
             "DOMAIN": "ADS",
@@ -6468,30 +6485,362 @@
             },
             "USEMAPPING": true
         },
-        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom": {
+        "PLC1.GVL_LVCP1.stGroup3_ContactorHMI": {
             "ACCESS": 3,
             "DOMAIN": "ADS",
             "DYNAMIC": true,
-            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom",
-            "SCHEMA": {
-                "$ref": "tchmi:server#/definitions/PLC1.ARRAY_1..19_OF-E_LineColors"
-            },
-            "USEMAPPING": true
-        },
-        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop": {
-            "ACCESS": 3,
-            "DOMAIN": "ADS",
-            "DYNAMIC": true,
-            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop",
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup3_ContactorHMI",
             "SCHEMA": {
                 "allOf": [
                     {
-                        "comment": "Group arrays - 19 groups"
+                        "comment": "Grup 3 kontaktör durum ve kontrol bilgileri"
                     },
                     {
-                        "$ref": "tchmi:server#/definitions/PLC1.ARRAY_1..19_OF-E_LineColors"
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
                     }
                 ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP1.stGroup4_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup4_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 4 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP1.stGroup5_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup5_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 5 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP1.stGroup6_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup6_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 6 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP1.stGroup7_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup7_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 7 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP1.stGroup8_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup8_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 8 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.GVL_LVCP1.stGroup9_ContactorHMI": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::GVL_LVCP1::stGroup9_ContactorHMI",
+            "SCHEMA": {
+                "allOf": [
+                    {
+                        "comment": "Grup 9 kontaktör durum ve kontrol bilgileri"
+                    },
+                    {
+                        "$ref": "tchmi:server#/definitions/PLC1.ST_ContactorHMI"
+                    }
+                ]
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_BaseTopCustomLines[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_BaseTopCustomLines[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_BaseTopCustomLines[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_BaseTopCustomLines[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.4": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[4]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.5": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[5]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.6": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[6]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.7": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[7]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.8": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[8]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.9": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineBottom[9]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.4": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[4]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.5": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[5]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.6": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[6]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.7": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[7]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.8": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[8]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.9": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::LVCP_GroupCustomLineTop[9]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
             },
             "USEMAPPING": true
         },
@@ -7467,12 +7816,32 @@
                 "PLC1.MAIN.xx": 3,
                 "PLC1.MAIN.xxx": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.0": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.1": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.2": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_BaseTopCustomLines.3": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.0": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.1": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.2": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.3": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.4": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.5": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.6": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.7": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.8": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineBottom.9": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.0": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.1": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.2": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.3": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.4": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.5": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.6": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.7": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.8": 3,
+                "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.9": 3,
                 "PLC1.PRG_LVCP2_Colors.LVCP_GroupCustomLineBottom.0": 3,
                 "PLC1.PRG_LVCP2_Colors.LVCP_GroupCustomLineTop.0": 3,
                 "SetLocale": 3,
