--- a/BetaTestLab_01_HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/BetaTestLab_01_HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -546,6 +546,71 @@
             ],
             "type": "integer"
         },
+        "PLC1.ST_CapacitorSchemaColorWithContactor": {
+            "properties": {
+                "BottomLineColor": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/PLC1.E_LineColors"
+                        },
+                        {
+                            "propertyOrder": 2
+                        }
+                    ]
+                },
+                "BottomLineColor2": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/PLC1.E_LineColors"
+                        },
+                        {
+                            "propertyOrder": 3
+                        }
+                    ]
+                },
+                "CapacitorColor": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/PLC1.E_LineColors"
+                        },
+                        {
+                            "propertyOrder": 4
+                        }
+                    ]
+                },
+                "ContactorPosition": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/PLC1.E_ContactorPosition"
+                        },
+                        {
+                            "propertyOrder": 6
+                        }
+                    ]
+                },
+                "GroundColor": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/PLC1.E_LineColors"
+                        },
+                        {
+                            "propertyOrder": 5
+                        }
+                    ]
+                },
+                "TopLineColor": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/PLC1.E_LineColors"
+                        },
+                        {
+                            "propertyOrder": 1
+                        }
+                    ]
+                }
+            },
+            "type": "object"
+        },
         "PLC1.ST_CircuitBreakerCommand": {
             "properties": {
                 "bAutoOffCmd": {
@@ -6844,6 +6909,146 @@
             },
             "USEMAPPING": true
         },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.4": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[4]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.5": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[5]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.6": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[6]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.7": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[7]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.8": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[8]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.9": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrCapacitorSchemaColor[9]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.ST_CapacitorSchemaColorWithContactor"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrLine.0": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrLine[0]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrLine.1": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrLine[1]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrLine.2": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrLine[2]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
+        "PLC1.PRG_LVCP1_Colors.arrLine.3": {
+            "ACCESS": 3,
+            "DOMAIN": "ADS",
+            "DYNAMIC": true,
+            "MAPPING": "PLC1::PRG_LVCP1_Colors::arrLine[3]",
+            "SCHEMA": {
+                "$ref": "tchmi:server#/definitions/PLC1.E_LineColors"
+            },
+            "USEMAPPING": true
+        },
         "PLC1.PRG_LVCP2_Colors.LVCP_GroupCustomLineBottom.0": {
             "ACCESS": 3,
             "DOMAIN": "ADS",
@@ -7842,6 +8047,20 @@
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.7": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.8": 3,
                 "PLC1.PRG_LVCP1_Colors.LVCP_GroupCustomLineTop.9": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.0": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.1": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.2": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.3": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.4": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.5": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.6": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.7": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.8": 3,
+                "PLC1.PRG_LVCP1_Colors.arrCapacitorSchemaColor.9": 3,
+                "PLC1.PRG_LVCP1_Colors.arrLine.0": 3,
+                "PLC1.PRG_LVCP1_Colors.arrLine.1": 3,
+                "PLC1.PRG_LVCP1_Colors.arrLine.2": 3,
+                "PLC1.PRG_LVCP1_Colors.arrLine.3": 3,
                 "PLC1.PRG_LVCP2_Colors.LVCP_GroupCustomLineBottom.0": 3,
                 "PLC1.PRG_LVCP2_Colors.LVCP_GroupCustomLineTop.0": 3,
                 "SetLocale": 3,
